--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
-    
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
